--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "start": "node dist/app.js",
+    "dev": "nodemon --loader ts-node/esm src/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +20,12 @@
     "mongoose": "^6.0.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.10.6",
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
